--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,46 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "url": "https://github.com/martynbiz/php-mongo",
+            "type": "git"
+        },
+	    {
+            "url": "https://github.com/martynbiz/php-translate-tool.git",
+            "type": "git"
+        },
+	    {
+            "url": "https://github.com/martynbiz/slim-module-core.git",
+            "type": "git"
+        }
+    ],
     "autoload": {
         "psr-4": {
-            "MartynBiz\\Slim\\Modules\\Core": "Core/"
+            "App\\": "Core/"
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "foil/foil": "0.*",
+        "martynbiz/php-mongo": "dev-master",
+        "martynbiz/php-validator": "dev-master",
+        "martynbiz/php-flash-message": "dev-master",
+        "monolog/monolog": "^1.19",
+        "facebook/php-sdk-v4": "^5.1",
+        "zendframework/zend-i18n": "^2.6",
+        "zendframework/zend-servicemanager": "^2.0",
+        "zendframework/zend-mail": "^2.5",
+        "zendframework/zend-cache": "^2.7",
+        "desarrolla2/cache": "^2.1",
+        "predis/predis": "^1.0",
+        "slim/csrf": "^0.6.0",
+        "aura/session": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "4.8.*",
+        "martynbiz/php-translate-tool": "dev-master"
     }
 }
