--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "App\\": "Core/"
+            "MartynBiz\\Slim\\Modules\\Core\\": "Core/"
         }
     },
     "require": {
