--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,10 @@
         "desarrolla2/cache": "^2.1",
         "predis/predis": "^1.0",
         "slim/csrf": "^0.6.0",
-        "aura/session": "^2.0"
+        "aura/session": "^2.0",
+        "robmorgan/phinx": "^0.9.2",
+        "martynbiz/phpdebugbar": "dev-master",
+        "illuminate/database": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
