--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,9 @@
         "php": ">=5.3.0",
         "foil/foil": "0.*",
         "martynbiz/slim-module": "dev-master",
-        "martynbiz/php-mongo": "dev-master",
         "martynbiz/php-validator": "dev-master",
         "martynbiz/php-flash-message": "dev-master",
         "monolog/monolog": "^1.19",
-        "facebook/php-sdk-v4": "^5.1",
         "zendframework/zend-i18n": "^2.6",
         "zendframework/zend-servicemanager": "^2.0",
         "zendframework/zend-mail": "^2.5",
@@ -43,7 +41,8 @@
         "desarrolla2/cache": "^2.1",
         "predis/predis": "^1.0",
         "slim/csrf": "^0.6.0",
-        "aura/session": "^2.0"
+        "aura/session": "^2.0",
+        "illuminate/database": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
