--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
         "predis/predis": "^1.0",
         "slim/csrf": "^0.6.0",
         "aura/session": "^2.0",
-        "illuminate/database": "^5.5"
+        "illuminate/database": "^5.5",
+        "robmorgan/phinx": "^0.9.2",
+        "martynbiz/phpdebugbar": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
