--- a/composer.json
+++ b/composer.json
@@ -44,13 +44,13 @@
         "aura/session": "^2.0",
         "illuminate/database": "^5.5",
         "robmorgan/phinx": "^0.9.2",
-        "martynbiz/phpdebugbar": "dev-master"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.8.*",
+        "martynbiz/phpdebugbar": "dev-master",
         "martynbiz/php-translate-tool": "dev-master",
         "symfony/dom-crawler": "^3.2",
         "symfony/css-selector": "^3.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*"
     },
     "autoload": {
         "psr-4": {
