--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
             "url": "https://github.com/martynbiz/slim-module.git",
             "type": "git"
         },
-        {
-            "url": "https://github.com/martynbiz/php-mongo",
+	    {
+            "url": "https://github.com/martynbiz/php-translate-tool.git",
             "type": "git"
         },
 	    {
-            "url": "https://github.com/martynbiz/php-translate-tool.git",
+            "url": "https://github.com/martynbiz/phpdebugbar.git",
             "type": "git"
         }
     ],
@@ -43,14 +43,12 @@
         "slim/csrf": "^0.6.0",
         "aura/session": "^2.0",
         "illuminate/database": "^5.5",
-        "robmorgan/phinx": "^0.9.2",
-        "martynbiz/phpdebugbar": "dev-master",
-        "martynbiz/php-translate-tool": "dev-master",
-        "symfony/dom-crawler": "^3.2",
-        "symfony/css-selector": "^3.2"
+        "robmorgan/phinx": "^0.9.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*"
+        "phpunit/phpunit": "4.8.*",
+        "martynbiz/phpdebugbar": "dev-master",
+        "martynbiz/php-translate-tool": "dev-master"
     },
     "autoload": {
         "psr-4": {
