--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "aura/session": "^2.0",
         "illuminate/database": "^5.5",
         "martynbiz/phpdebugbar": "dev-master",
-        "martynbiz/events": "dev-master",
+        "martynbiz/php-events": "dev-master",
         "robmorgan/phinx": "^0.9.2"
     },
     "require-dev": {
