--- a/composer.json
+++ b/composer.json
@@ -49,11 +49,11 @@
         "illuminate/database": "^5.5",
         "martynbiz/phpdebugbar": "dev-master",
         "martynbiz/php-events": "dev-master",
-        "robmorgan/phinx": "^0.9.2"
+        "robmorgan/phinx": "^0.9.2",
+        "martynbiz/php-translate-tool": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*",
-        "martynbiz/php-translate-tool": "dev-master"
+        "phpunit/phpunit": "4.8.*"
     },
     "autoload": {
         "psr-4": {
